added the name surname, added relationships

--- a/homeo-api/api/category/models/category.settings.json
+++ b/homeo-api/api/category/models/category.settings.json
@@ -12,6 +12,13 @@
   "attributes": {
     "name": {
       "type": "string"
+    },
+    "class_ids": {
+      "collection": "class"
+    },
+    "userClasses": {
+      "via": "classId",
+      "collection": "user-class"
     }
   }
 }
