fixed the naming of a field for naming consistency

--- a/homeo-api/api/category/models/category.settings.json
+++ b/homeo-api/api/category/models/category.settings.json
@@ -13,12 +13,12 @@
     "name": {
       "type": "string"
     },
-    "class_ids": {
+    "classIds": {
       "collection": "class"
     },
     "userClasses": {
-      "via": "classId",
-      "collection": "user-class"
+      "collection": "user-class",
+      "via": "classId"
     }
   }
 }
