--- a/homeo-api/api/user-class/models/user-class.settings.json
+++ b/homeo-api/api/user-class/models/user-class.settings.json
@@ -19,8 +19,8 @@
       "via": "UserClasses"
     },
     "classId": {
-      "model": "category",
-      "via": "userClasses"
+      "via": "userClasses",
+      "model": "category"
     }
   }
 }
