--- a/homeo-client/package.json
+++ b/homeo-client/package.json
@@ -16,6 +16,7 @@
 		"typeface-roboto": "0.0.75"
 	},
 	"scripts": {
+		"heroku-postbuild": "npm run build",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
