--- a/homeo-api/api/category/models/category.settings.json
+++ b/homeo-api/api/category/models/category.settings.json
@@ -1,17 +1,25 @@
 {
-  "kind": "collectionType",
-  "connection": "default",
-  "collectionName": "categories",
-  "info": {
-    "name": "Category"
-  },
-  "options": {
-    "increments": true,
-    "timestamps": true
-  },
-  "attributes": {
-    "name": {
-      "type": "string"
-    }
-  }
+	"kind": "collectionType",
+	"connection": "default",
+	"collectionName": "categories",
+	"info": {
+		"name": "Category"
+	},
+	"options": {
+		"increments": true,
+		"timestamps": true
+	},
+	"attributes": {
+		"name": {
+			"type": "string"
+		},
+		"slug": {
+			"type": "uid"
+		},
+		"image": {
+			"model": "file",
+			"via": "related",
+			"plugin": "upload"
+		}
+	}
 }
