MOD make image files single

--- a/homeo-api/api/class/models/class.settings.json
+++ b/homeo-api/api/class/models/class.settings.json
@@ -38,7 +38,7 @@
       "type": "string"
     },
     "image": {
-      "collection": "file",
+      "model": "file",
       "via": "related",
       "plugin": "upload",
       "required": false
@@ -48,6 +48,13 @@
     },
     "categoryId": {
       "model": "category"
+    },
+    "Instructor": {
+      "type": "string"
+    },
+    "InstructorInitials": {
+      "type": "string",
+      "maxLength": 2
     }
   }
 }
