--- a/homeo-api/api/class/models/class.settings.json
+++ b/homeo-api/api/class/models/class.settings.json
@@ -49,12 +49,15 @@
     "categoryId": {
       "model": "category"
     },
-    "Instructor": {
+    "instructor": {
       "type": "string"
     },
-    "InstructorInitials": {
+    "instructorInitials": {
       "type": "string",
       "maxLength": 2
+    },
+    "link": {
+      "type": "string"
     }
   }
 }
